--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
-    "eslint": "eslint  src/ --fix --quiet --ext .js,.jsx,.ts,.tsx",
+    "eslint": "eslint  src/ --fix --cache --quiet --ext .js,.jsx,.ts,.tsx",
     "stylelint": "stylelint 'src/**/*.less' --fix",
     "pre-commit": "npm run eslint && npm run stylelint",
     "echo": "node message.js"
