feat: support command by rts, add rtc support checker, optimize interrupt logic, update openapi param format, update readme.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "dev": "npm run echo && npm run start",
     "start": "cross-env REACT_APP_LOCAL=cn  craco start",
+    "server:start": "node Server/app.js",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
