fix: fix aiAns Extension & distinguish asr large/small model configurations & remove linebreak eslint.

--- a/.eslintrc
+++ b/.eslintrc
@@ -42,7 +42,7 @@
   ],
   "rules": {
     "prettier/prettier": ["warn", { "trailingComma": "es5", "printWidth": 200 }],
-    "linebreak-style": ["error", "unix"],
+    "linebreak-style": "off",
     "no-console": ["warn", { "allow": ["warn", "error", "log"] }],
     "no-case-declarations": 0,
     "no-param-reassign": 0,
