hotfix: fix sdk version

--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
-    "@volcengine/rtc": "4.66.1",
+    "@volcengine/rtc": "~4.66.13",
     "@arco-design/web-react": "^2.65.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
