feat: Simplify the code & remove useless components.

--- a/Server/package.json
+++ b/Server/package.json
@@ -11,12 +11,14 @@
     "koa-bodyparser": "^4.4.1",
     "koa2-cors": "^2.0.6",
     "lodash": "^4.17.21",
-    "node-fetch": "^2.3.2"
+    "node-fetch": "^2.3.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "nodemon app.js"
   }
 }
