修改了Dockerfile，使用镜像源

--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -3,9 +3,8 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package*.json ./
-COPY yarn.lock ./
 
-RUN yarn
+RUN yarn config set registry https://registry.npmmirror.com/ && yarn
 
 COPY . .
 
